# leto

./: .devcontainer.json  .gitignore  404.html  LICENSE  README.md  index.html  leto.py  makefile  mkdocs.yml  onei_xls_loader.py  pyproject.toml  sitemap.xml
.github/workflows/: docker.yml  docs.yml  test.yml
data/: comments_alicante.csv  locations_alicante.csv
data/assets/: countries.geo.json
dev/: index.html
docker/: docker-compose.yml  dockerfile  docs.dockerfile  requirements.txt
docs/: dev.md  guide.md  index.md  tutorial.md
docs/data/: employment_alicante.csv  tourism_spain.csv
docs/design/: 2026-07-03-fact-kb-temporal-evolution.md  2026-07-03-leto-ii-consolidation.md  2026-07-03-leto-ii-vision.md  2026-07-03-nell-demo-design.md  2026-07-04-leto-knowledge-model.md  2026-07-04-leto-substrate-vision.md
docs/plans/: 2026-07-03-leto-ii-consolidation.md  2026-07-03-leto-ii-vs1.md  2026-07-03-nell-demo.md  2026-07-04-leto-bitemporal-slice2.md  2026-07-04-leto-knowledge-model-vs1.md
examples/: nell.py  test_nell.py
guide/: index.html
leto/: __init__.py  backends_lingo.py  consolidate.py  engine.py  markdown.py  model.py  query.py  storage.py  store.py  ui.py  utils.py  visualization.py
leto/loaders/: __init__.py  dummy.py  structured.py  unstructured.py  wikipedia.py  (+1 more)
search/: search_index.json
tests/: test_consolidate.py  test_consolidation_end_to_end.py  test_csv_loader.py  test_engine.py  test_loaders.py  test_markdown.py  test_model.py  test_queries.py  test_smoke.py  test_store.py  test_vs1_end_to_end.py
tutorial/: index.html
(+20 files in other folders)
