[project]
name = "leto"
version = "0.0.1"
description = "LETO — Learning Engine Through Ontologies: a knowledge-discovery engine."
requires-python = ">=3.13"
dependencies = [
    "beaver-db>=2.0.0rc4",
    "pydantic>=2",
    "python-frontmatter",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
llm = ["lingo-ai>=2.1.0"]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
